[package]
name = "rhai_http"
version = "0.1.0"
edition = "2021"
authors = ["José F. Rives"]
description = ""
keywords = ["scripting", "scripting-language", "embedded", "rhai"]

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "cookies", "deflate", "gzip", "json"] }
rhai = { version = "1.9.1", features = ["serde"] }
serde_json = "1.0.93"
